# reagent-flow

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  pyproject.toml  ttrace-ai-production-practices.md
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish-pypi.yml  publish-testpypi.yml
docs/: linkedin-launch-post.md
docs-site/: docs.json  installation.mdx  introduction.mdx  quickstart.mdx
docs-site/adapters/: anthropic.mdx  crewai.mdx  langchain.mdx  langgraph.mdx  openai.mdx  overview.mdx
docs-site/advanced/: agent-stack-traces.mdx  async-support.mdx  ci.mdx  nested-schemas.mdx  pytest-plugin.mdx
docs-site/assertions/: flow-and-count.mdx  golden-baselines.mdx  handoff-contracts.mdx  token-and-cost-guards.mdx  tool-output-contracts.mdx
docs-site/concepts/: contract-testing.mdx  sessions-and-traces.mdx  why-contract-testing.mdx
docs-site/examples/: release-gatekeeper.mdx  vendor-onboarding.mdx
examples/langgraph_demo/: README.md  agent.py  conftest.py  demo.py  orchestrator.py  showcase.py  test_demo.py  tools.py
examples/manual_logging/: test_example.py
examples/vendor_onboarding_showcase/: README.md  ci_failure_demo.py  showcase.py  test_showcase.py  vendor_onboarding_showcase.excalidraw
