[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttrace-ai-workspace"
version = "0.0.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = ["--import-mode=importlib"]
