[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttrace-ai-workspace"
version = "0.0.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D", "S"]
ignore = [
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__
    "D203",   # conflicts with D211 (no-blank-line-before-class)
    "D213",   # conflicts with D212 (multi-line-summary-second-line)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["D", "S101"]
"examples/**/*.py" = ["D", "S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
]
markers = [
    "unit: unit tests (default)",
    "integration: integration tests",
    "e2e: end-to-end tests",
]

[tool.coverage.run]
source = ["packages/ttrace-ai/src/ttrace_ai"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
